# checkerboard

./: .gitignore  Cargo.toml  calibration  ir
src/: bt40.rs  checkerboard.rs  hololens.rs  image.rs  ir.rs  main.rs  matrix.rs  nir.rs
