package={name='checkerboard',version='0.0.0',edition='2021'}
[features]
u3v=['dep:cameleon']
uvc=['dep:uvc']
png=['dep:png']
default=['dep:nalgebra','u3v','png','uvc']
[dependencies]
bytemuck='*'
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector',features=['unstable']}#norm
nalgebra={version='*', optional=true, default-features=false, features=['std']}
image={git='https://github.com/Matthias-Fauconneau/image',features=['new_uninit']}
cameleon={version='*', features=['libusb'], optional=true}
uvc={package='uvc-sys', version='*', optional=true}
#uvc={package='uvc-sys', git='https://github.com/l1npengtul/libuvc-rs', optional=true}
ui={git='https://github.com/Matthias-Fauconneau/ui',default-features=false,features=['softbuffer','generators']}
png={package='image',version='*',default-features=false,features=['png'],optional=true}
imageproc='*'
itertools='*'
ffmpeg={version='*', package='ffmpeg-next', default-features=false, features=['codec','format']} #'static',
[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}