package={name='checkerboard',version='0.0.0',edition='2021'}

[features]
nir=['dep:cameleon']
ir=['dep:uvc']
png=['imagers/png']
hololens=['dep:ffmpeg']
default=['dep:nalgebra','nir'] #'ir','png','hololens']

[dependencies]
bytemuck='*'
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector',features=['unstable']}#norm
nalgebra={version='*', optional=true, default-features=false, features=['std']}
image={git='https://github.com/Matthias-Fauconneau/image',features=['new_uninit']}
cameleon={version='*', features=['libusb'], optional=true}
ui={git='https://github.com/Matthias-Fauconneau/ui',default-features=false,features=['softbuffer','generators']}
imageproc='*'
itertools='*'
uvc={package='uvc-sys', git='https://github.com/l1npengtul/libuvc-rs', optional=true}
imagers={package='image',version='*',default-features=false}#,features=['png']}#,optional=true}
ffmpeg={version='*', package='ffmpeg-next', default-features=false, features=['codec','format'], optional=true}

[patch.'https://github.com/Matthias-Fauconneau/image']
image={path='../image'}
